--- a/src/options/options.html
+++ b/src/options/options.html
@@ -370,7 +370,7 @@ const helloWorld = () => {
     <div id="spinner" style="display: none;"></div>
     <div id="status" class="status"></div>
 
-    <script src="../browser-polyfill.min.js"></script>
+    <script src="../browser-polyfill.js"></script>
     <script src="../shared/default-options.js"></script>
     <script src="../shared/context-menus.js"></script>
     <script src="options.js"></script>
