--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -26,9 +26,16 @@
     <a href="#" class="button" id="downloadSelection">Download selected</a>
   </div>
   <div id="spinner"></div>
-  <script type="application/javascript" src="../browser-polyfill.js"></script>
   <script type="application/javascript" src="lib/codemirror.js"></script>
   <script type="application/javascript" src="lib/mode/markdown/markdown.js"></script>
+  <script type="application/javascript" src="../browser-polyfill.js"></script>
+  <script type="application/javascript" src="../background/apache-mime-types.js"></script>
+  <script type="application/javascript" src="../background/moment.js"></script>
+  <script type="application/javascript" src="../background/turndown.js"></script>
+  <script type="application/javascript" src="../background/turndown-plugin-gfm.js"></script>
+  <script type="application/javascript" src="../shared/lib/Readability.js"></script>
+  <script type="application/javascript" src="../shared/default-options.js"></script>
+  <script type="application/javascript" src="../shared/parsing.js"></script>
   <script type="application/javascript" src="popup.js"></script>
 </body>
 
