Rearranged some files.

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -28,14 +28,16 @@
   <div id="spinner"></div>
   <script type="application/javascript" src="lib/codemirror.js"></script>
   <script type="application/javascript" src="lib/mode/markdown/markdown.js"></script>
-  <script type="application/javascript" src="../browser-polyfill.js"></script>
-  <script type="application/javascript" src="../background/apache-mime-types.js"></script>
-  <script type="application/javascript" src="../background/moment.js"></script>
-  <script type="application/javascript" src="../background/turndown.js"></script>
-  <script type="application/javascript" src="../background/turndown-plugin-gfm.js"></script>
+  <script type="application/javascript" src="../shared/lib/browser-polyfill.js"></script>
+  <script type="application/javascript" src="../shared/lib/apache-mime-types.js"></script>
+  <script type="application/javascript" src="../shared/lib/moment.js"></script>
+  <script type="application/javascript" src="../shared/lib/turndown.js"></script>
+  <script type="application/javascript" src="../shared/lib/turndown-plugin-gfm.js"></script>
   <script type="application/javascript" src="../shared/lib/Readability.js"></script>
-  <script type="application/javascript" src="../shared/default-options.js"></script>
-  <script type="application/javascript" src="../shared/parsing.js"></script>
+  <script type="application/javascript" src="../shared/options.js"></script>
+  <script type="application/javascript" src="../shared/text-replace.js"></script>
+  <script type="application/javascript" src="../shared/from-html.js"></script>
+  <script type="application/javascript" src="../shared/to-md.js"></script>
   <script type="application/javascript" src="popup.js"></script>
 </body>
 
