Added more modes for the codemirror editor
This allows for better syntax highlighting for the frontmatter, html that ends up in the markdown and github-flavoured extensions

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -27,7 +27,15 @@
   </div>
   <div id="spinner"></div>
   <script type="application/javascript" src="lib/codemirror.js"></script>
+  <script type="application/javascript" src="lib/addon/mode/overlay.js"></script>
+  <script type="application/javascript" src="lib/mode/xml/xml.js"></script>
+  <script type="application/javascript" src="lib/mode/css/css.js"></script>
+  <script type="application/javascript" src="lib/mode/javascript/javascript.js"></script>
+  <script type="application/javascript" src="lib/mode/htmlmixed/htmlmixed.js"></script>
+  <script type="application/javascript" src="lib/mode/yaml/yaml.js"></script>
   <script type="application/javascript" src="lib/mode/markdown/markdown.js"></script>
+  <script type="application/javascript" src="lib/mode/gfm/gfm.js"></script>
+  <script type="application/javascript" src="lib/mode/yaml-frontmatter/yaml-frontmatter.js"></script>
   <script type="application/javascript" src="../shared/lib/browser-polyfill.js"></script>
   <script type="application/javascript" src="../shared/lib/apache-mime-types.js"></script>
   <script type="application/javascript" src="../shared/lib/moment.js"></script>
