--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -41,6 +41,7 @@
   <script type="application/javascript" src="../shared/lib/moment.js"></script>
   <script type="application/javascript" src="../shared/lib/turndown.js"></script>
   <script type="application/javascript" src="../shared/lib/turndown-plugin-gfm.js"></script>
+  <script type="application/javascript" src="../shared/lib/turndown-plugin-torchlight.js"></script>
   <script type="application/javascript" src="../shared/lib/Readability.js"></script>
   <script type="application/javascript" src="../shared/options.js"></script>
   <script type="application/javascript" src="../shared/text-replace.js"></script>
